# demo-dioxus-granularity

./: Cargo.toml  Dioxus.toml  Dockerfile  README.md  fly.toml  rustfmt.toml
assets/: tailwind.css
src/: app.rs  main.rs
